code-gen/templates/customer-hub/base/ping-cloud/pingaccess-was/engine/chub-pingaccess-was-scaledown-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was
  namespace: ping-cloud
spec:
  replicas: 2
